# slam-app

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  data_record.cpp  native_entry.cpp  slam.cpp
app/src/main/cpp/algorithm/: CMakeLists.txt  algorithm_interface.cpp  algorithm_interface.h  algorithm_interface_dl.cpp  slam_api.h  vio.cpp  vio.h
app/src/main/cpp/algorithm/Initializer/: CMakeLists.txt  system.cpp  system.h
app/src/main/cpp/algorithm/Initializer/camera_model/: CMakeLists.txt
app/src/main/cpp/algorithm/Initializer/camera_model/include/camodocal/camera_models/: CostFunctionFactory.h
app/src/main/cpp/algorithm/Initializer/camera_model/src/camera_models/: CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
app/src/main/cpp/algorithm/Initializer/camera_model/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
app/src/main/cpp/algorithm/Initializer/camera_model/src/sparse_graph/: Transform.cc
app/src/main/cpp/algorithm/Initializer/feature_tracker/: CMakeLists.txt
app/src/main/cpp/algorithm/Initializer/feature_tracker/src/: feature_tracker.cpp  parameters.h  tic_toc.h
app/src/main/cpp/algorithm/Initializer/slam_api/: obslam_api.cpp  obslam_api.h
app/src/main/cpp/algorithm/Initializer/vins_estimator/: CMakeLists.txt
app/src/main/cpp/algorithm/Initializer/vins_estimator/src/: estimator.cpp
app/src/main/cpp/algorithm/Initializer/vins_estimator/src/factor/: imu_factor.h
app/src/main/cpp/algorithm/Initializer/vins_estimator/src/initial/: initial_sfm.cpp
app/src/main/cpp/algorithm/Initializer/vins_estimator/src/utility/: perf_monitor.cpp  utility.cpp  utility.h
app/src/main/cpp/algorithm/interfaces/: initialization_result_interface.h  pre_process_interface.h
app/src/main/cpp/algorithm/modify-vins-mono/: CMakeLists.txt  system.cpp  system.h
app/src/main/cpp/algorithm/modify-vins-mono/camera_model/: CMakeLists.txt
app/src/main/cpp/algorithm/modify-vins-mono/camera_model/src/camera_models/: Camera.cc
app/src/main/cpp/algorithm/modify-vins-mono/camera_model/src/gpl/: gpl.cc
app/src/main/cpp/algorithm/modify-vins-mono/feature_tracker/: CMakeLists.txt
app/src/main/cpp/algorithm/modify-vins-mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  parameters.cpp  parameters.h  tic_toc.h
app/src/main/cpp/algorithm/modify-vins-mono/slam_api/: obslam_api.cpp  obslam_api.h
app/src/main/cpp/algorithm/modify-vins-mono/vins_estimator/: CMakeLists.txt
app/src/main/cpp/algorithm/modify-vins-mono/vins_estimator/src/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  motion_only_estimator.cpp  motion_only_estimator.h  parameters.cpp  parameters.h
app/src/main/cpp/algorithm/modify-vins-mono/vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
app/src/main/cpp/algorithm/modify-vins-mono/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
app/src/main/cpp/algorithm/modify-vins-mono/vins_estimator/src/utility/: CameraPoseVisualization.h  perf_monitor.cpp  perf_monitor.h  tic_toc.h  utility.h  visualization.h
app/src/main/cpp/lib-includes/Eigen/src/Core/util/: Memory.h
app/src/main/cpp/lib-includes/opencv2/: photo.hpp  stitching.hpp  videoio.hpp
app/src/main/cpp/lib-includes/opencv2/stitching/detail/: exposure_compensate.hpp
app/src/main/cpp/lib-includes/opencv2/videoio/legacy/: constants_c.h
app/src/main/cpp/platform/: CMakeLists.txt  RosbagPacker.cpp  RosbagPacker.h  cam_publisher.cpp  cam_publisher.h  camera_model.cpp  camera_model.h  data_dumper.cpp  data_dumper.h  dataset_player.cpp  dataset_player.h  image_preview.cpp  image_preview.h  imu_publisher.cpp  imu_publisher.h  map_drawer.cpp  map_drawer.h  native_debug.cpp  native_debug.h  perf_monitor.cpp  perf_monitor.h  platform_service.cpp  platform_service.h
app/src/main/cpp/platform/camera_utils/: ndk_utils.cpp  ndk_utils.h
app/src/main/cpp/platform/openvis_simulation/: BsplineSE3.h  Simulator.cpp  Simulator.h
app/src/main/cpp/platform/rosbag/: CMakeLists.txt
app/src/main/cpp/platform/rosbag/include/: cv_bridge_simple.h
app/src/main/cpp/platform/rosbag/include/MessageType/geometry_msgs/: Point.h  Point32.h  PointStamped.h  Pose.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Twist.h  TwistWithCovariance.h  Vector3.h  Vector3Stamped.h
app/src/main/cpp/platform/rosbag/include/MessageType/sensor_msgs/: ChannelFloat32.h  CompressedImage.h  Image.h  Imu.h  PointCloud.h  image_encodings.h
app/src/main/cpp/platform/rosbag/include/MessageType/std_msgs/: Bool.h  Duration.h  Header.h  Time.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/console_bridge/: console.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/cpp_common/: datatypes.h  header.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/lz4/: lz4.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/rosbag/: bag.h  buffer.h  chunked_file.h  constants.h  exceptions.h  message_instance.h  query.h  stream.h  structures.h  view.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/roscpp_serialization/: serialization.h  serialized_message.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/roscpp_traits/: builtin_message_traits.h  message_event.h  message_forward.h  message_operations.h  message_traits.h
app/src/main/cpp/platform/rosbag/include/RosbagStorage/roslz4/: lz4s.h
app/src/main/cpp/platform/rosbag/src/: cv_bridge_simple.cpp
app/src/main/cpp/platform/rosbag/src/RosbagStorage/: bag.cpp  buffer.cpp  chunked_file.cpp  header.cpp  lz4.c  lz4_stream.cpp  lz4s.c  message_instance.cpp  query.cpp  serialization.cpp  stream.cpp  uncompressed_stream.cpp  view.cpp  xxhash.c  xxhash.h
(+50 files in other folders)
